Use jdk20